--- a/index.ejs
+++ b/index.ejs
@@ -52,7 +52,7 @@ padding:0;
 width:0;
 }
 
-input[type=file]:after{
+input[type=file]::before{
   content:"Browse";
   position:relative;
   -webkit-appearance: button;
@@ -83,7 +83,14 @@ input[type=file]:after{
 
 .custom-h1{
   font-weight: 700;
-  margin-bottom: 10%;
+  margin-bottom: 5%;
+}
+
+form{
+  display:flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: flex-end;
 }
 </style>
 
