--- a/index.ejs
+++ b/index.ejs
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FTP NodeJS by Rahman</title>
 <style>
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 h1,h2,h3{
   text-align:center;
   margin:1rem;
@@ -42,26 +45,21 @@ h1,h2,h3{
 input[type=file]{
   position:relative;
   -webkit-appearance: textfield;
+  font-weight: 600;
 }
 
-input[type=file]::-webkit-file-upload-button{
-border:none;
-margin:0;
-padding:0;
--webkit-appearance: none;
-width:0;
-}
-
-input[type=file]::before{
-  content:"Browse";
-  position:relative;
-  -webkit-appearance: button;
-  background-color:#5e5df0;
-  color:white;
+input[type="file"]::file-selector-button {
+  border: none;
+  margin: 0.5rem;
+  padding: 0.8rem;
+  background-color: #5e5df0;
+  position: relative;
+  color: white;
   font-family: roboto;
-  font-weight: 700;
-  padding:0.8rem;
-  border-radius:1rem;
+  border-radius: 1rem;
+  box-shadow: #5e5df0 0 5px 10px -5px;
+  cursor: pointer;
+  font-weight: 600;
 }
 
 .btnUpload{
@@ -92,6 +90,36 @@ form{
   flex-direction: column;
   align-items: flex-end;
 }
+
+.progress-bar {
+  height: 25px;
+  width: 250px;
+  border: 2px solid darkblue;
+  border-radius: 999px;
+}
+
+.progress-bar-fil {
+  border-radius: 999px;
+  height: 100%;
+  width: 0%;
+  background: lightblue;
+  display: flex;
+  align-items: center;
+  transition: width 0.25s;
+}
+
+.progress-bar-text {
+margin-left: 110px;
+margin-bottom: 60px;
+font-weight: 700;
+font-size: 15px;
+font-family: Roboto;
+}
+
+.dnone {
+  display: none;
+}
+
 </style>
 
 </head>
@@ -99,16 +127,76 @@ form{
     <div class="containerFluid">
       <h1 class="custom-h1">Transfer File Server by Rahman</h1>
       <h2>Silahkan Upload File</h2>
+<!-- Input File -->
        <div class="container">
-        <form action="/Downloads" method="post" enctype="multipart/form-data">
-          <input type="file" name="files" class="" multiple />
-          <button class="btnUpload">Upload File</button>
+        <form action="/Downloads" id="uploadForm" method="post" enctype="multipart/form-data">
+          <input type="file" name="files" class="" id="files" multiple />
+          <input type="submit" class="btnUpload" value="Upload File">
         </form>
       </div>
+<!-- Progress Bar -->
+      <div class="container">
+        <div class="progress-bar dnone" id="progressBar">
+          <div class="progress-bar-fil">
+            <span class="progress-bar-text">0%</span>
+          </div>
+        </div>
+      </div>
+<!-- View Folder Upload -->
       <h2>Folder File Upload</h2>
       <div class="container">
         <a href="/Download" class="btnView">Lihat File Upload</a>
       </div>
     </div>
+
+<!-- Script.js Progress Bar -->
+    <script>
+      const uploadForms = document.getElementById("uploadForm");
+      const inpFile = document.getElementById("files");
+
+      const progressBarCont = document.querySelector(".progress-bar");
+      const progressBarFill = document.querySelector(
+        "#progressBar > .progress-bar-fil"
+      );
+      const progressBarText =
+        progressBarFill.querySelector(".progress-bar-text");
+
+      uploadForms.addEventListener("submit", uploadFile);
+
+      function uploadFile() {
+        const xhr = new XMLHttpRequest();
+
+        xhr.upload.onloadstart = function (e) {
+          progressBarCont.classList.remove("dnone");
+        };
+
+        xhr.upload.onprogress = (e) => {
+          const percent = e.lengthComputable ? (e.loaded / e.total) * 100 : 0;
+          progressBarFill.style.width = percent.toFixed(2) + "%";
+          progressBarText.textContent = percent.toFixed(2) + "%";
+          // console.log(e);
+        };
+
+        xhr.upload.onloadend = (e) => {
+          progressBarCont.classList.add("dnone");          
+        };
+
+        xhr.onerror = function (e) {
+          alert("Error");
+          //console.log(e);
+        };
+        xhr.onload = function (e) {
+          if(e.currentTarget.status < 400){
+            alert("File Berhasil Di Upload");
+        } else {
+            alert("Gagal Upload Coba Lagi");
+        };
+        };
+
+        xhr.open("POST", "/Downloads");
+        xhr.send(new FormData(uploadForms));
+      }
+    </script>
+
   </body>
 </html>
