update button view folder upload

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -30,7 +30,7 @@
 <!-- View Folder Upload -->
       <h2>Folder File Upload</h2>
       <div class="container">
-        <a href="/Download" class="btnView">Lihat File Upload</a>
+        <a href="/Download" target="_blank" class="btnView">Lihat File Upload</a>
       </div>
     </div>
 
